# dotenv-linter

./: .gitignore  .gitingore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  action.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: depup.yml  dotenv.yml  test.yml
.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  zipimport.data.json  zipimport.meta.json
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/dotenv_linter/: __init__.data.json  __init__.meta.json  cli.data.json  cli.meta.json  exceptions.data.json  exceptions.meta.json  types.data.json  types.meta.json  version.data.json  version.meta.json
.mypy_cache/3.6/dotenv_linter/grammar/: __init__.data.json  __init__.meta.json  lexer.data.json  lexer.meta.json  parsetab.data.json  parsetab.meta.json
.mypy_cache/3.6/dotenv_linter/logics/: __init__.data.json  __init__.meta.json  text.data.json  text.meta.json
.mypy_cache/3.6/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.6/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.6/pkg_resources/: __init__.data.json  __init__.meta.json
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_templates/: github.html  moreinfo.html
docs/pages/: cli.rst  ignoring-violations.rst
docs/pages/integrations/: docker.rst  github-actions.rst  index.rst
docs/pages/violations/: index.rst
dotenv_linter/: checker.py  cli.py  constants.py  exceptions.py  fst_checker.py  ignore.py  types.py  version.py
dotenv_linter/grammar/: fst.py  grammar.lark  lexer.py  parser.out  parser.py  parsetab.py
dotenv_linter/logics/: collector.py  report.py  text.py
dotenv_linter/violations/: assigns.py  base.py  comments.py  names.py  parsing.py  values.py
dotenv_linter/visitors/: base.py
dotenv_linter/visitors/fst/: assigns.py  comments.py  metadata.py  names.py  values.py
scripts/: entrypoint.sh
tests/: conftest.py  test_checker.py
tests/fixtures/: .env.correct  .env.disable  .env.duplicate  .env.eol  .env.incorrect  .env.parsing
tests/test_cli/: test_bad_arguments.py  test_lint_command.py  test_version.py
tests/test_grammar/: test_fst.py  test_parser.py
tests/test_violations/: conftest.py  test_assign.py  test_codes.py  test_comments.py  test_definition_order.py  test_docs.py  test_ignore.py  test_implementation.py  test_names.py  test_parsing.py  test_toggle.py  test_values.py
