[tool.poetry]
name = "dotenv-linter"
version = "0.4.0"
description = "Linting dotenv files like a charm!"
authors = [
  "sobolevn <mail@sobolevn.me>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/wemake-services/dotenv-linter"
homepage = "https://dotenv-linter.readthedocs.io"

keywords = [
  "dotenv",
  "linter",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.7"

ply = "^3.11"
click = ">=6,<9"
click_default_group = "^1.2"
attrs = "*"
typing_extensions = ">=3.6,<5.0"
importlib-metadata = { version = "*", python = "<3.8" }

[tool.poetry.group.test.dependencies]
wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.5"
nitpick = "^0.29"

pytest = "^7.0"
pytest-cov = "^3.0"
pytest-randomly = "^3.8"

safety = "^2.1"
codespell = "^2.2.1"
doc8 = "^0.11"

mypy = "^0.971"
types-setuptools = "^65.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.1"
sphinx-autodoc-typehints = "^1.12"
sphinx-click = "^3.1"
m2r2 = "^0.3"
tomlkit = "^0.11"

[tool.poetry.scripts]
dotenv-linter = "dotenv_linter.cli:cli"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
