[tool.poetry]
name = "dotenv-linter"
version = "0.5.0"
description = "Linting dotenv files like a charm!"
authors = [
  "sobolevn <mail@sobolevn.me>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/wemake-services/dotenv-linter"
homepage = "https://dotenv-linter.readthedocs.io"

keywords = [
  "dotenv",
  "linter",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.9"

ply = "^3.11"
click = ">=6,<9"
click_default_group = "^1.2"
attrs = "*"
typing_extensions = ">=4.0,<5.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18"
flake8-pytest-style = ">=1.6,<3.0"
nitpick = "^0.35"

pytest = "^8.1"
pytest-cov = ">=4.1,<7.0"
pytest-randomly = "^3.12"

codespell = "^2.2"
doc8 = "^1.1"

mypy = "^1.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.23,<3.0"
sphinx-click = ">=3.1,<7.0"
m2r2 = "^0.3"
tomli = "^2.0"

[tool.poetry.scripts]
dotenv-linter = "dotenv_linter.cli:cli"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
